--- a/Week04/Notebook/20250502_01.ipynb
+++ b/Week04/Notebook/20250502_01.ipynb
@@ -119,7 +119,7 @@
     "\n",
     "---\n",
     "\n",
-    "![Co2 2019 Bar Plot](co2_2019.png)\n",
+    "![Co2 2019 Bar Plot](Images/co2_2019.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
