--- a/Week04/Notebook/20250502_01.ipynb
+++ b/Week04/Notebook/20250502_01.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "---\n",
     "\n",
-    "![Electricity Line Plot](electricity_line.png)\n",
+    "![Electricity Line Plot](Images/electricity_line.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
@@ -91,7 +91,7 @@
     "\n",
     "---\n",
     "\n",
-    "![CO2 Line Plot](c02_line.png)\n",
+    "![CO2 Line Plot](Images/c02_line.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
@@ -105,7 +105,7 @@
     "\n",
     "---\n",
     "\n",
-    "![GDP Growth Line Plot](gdp_grow_line.png)\n",
+    "![GDP Growth Line Plot](Images/gdp_grow_line.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
@@ -132,7 +132,7 @@
     "\n",
     "---\n",
     "\n",
-    "![Co2 Box Plot](co2_box.png)\n",
+    "![Co2 Box Plot](Images/co2_box.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
@@ -145,7 +145,7 @@
     "\n",
     "---\n",
     "\n",
-    "![FacetGrid Plot](facet.png)\n",
+    "![FacetGrid Plot](Images/facet.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
@@ -158,7 +158,7 @@
     "\n",
     "---\n",
     "\n",
-    "![Heatmap Plot](heatmap.png)\n",
+    "![Heatmap Plot](Images/heatmap.png)\n",
     "\n",
     "**Observations:**\n",
     "\n",
