--- a/Week07_SDGs_Basics/Notebook/20250524.md
+++ b/Week07_SDGs_Basics/Notebook/20250524.md
@@ -37,13 +37,13 @@ To investigate, I will perform the following steps:
 ## Visualization
 
 ### Figure 1 - Access to electricity in India (2000 - 2020)
-![Electricity Access](fig1_electricity_access.png)
+![Electricity Access](Image/fig1_electricity_access.png)
 Electricity access increased from around 60% in 2000 to almost 100% in 2020.
 
 ### Figure 2 - Renewable energy share in India (2000 - 2020)
-![Renewable Energy](fig2_renewable_share.png)
+![Renewable Energy](Image/fig2_renewable_share.png)
 Renewable energy share drop from above 46% in 2000 to below 34% in 2020.
 
 ### Figure 3 - Electricity Generation by Source in India (2000 - 2020)
-![Electricity by Source](fig3_energy_sources.png)
+![Electricity by Source](Image/fig3_energy_sources.png)
 Fossil fuels skyrocketed while renewable energy had a steady growth.
