--- a/Week11_Sustainability_Mini_Project/Notebook/20250623.md
+++ b/Week11_Sustainability_Mini_Project/Notebook/20250623.md
@@ -1,1 +1,1 @@
-This mini project aims to discover the relationship between gender and education degree among chosen countries, mainly Muslim - majority countries.
+This mini project aims to discover the relationship between gender and education attainment in selected countries, mainly Muslim - majority.
